syntax = "proto3";

package api.cart.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/cart/v1;v1";

// 购物车服务，管理用户的预选购商品列表、数量变更及促销应用。
service Cart {
  // 向购物车中加入新商品或增加已有商品数量。
  rpc AddItemToCart(AddItemToCartRequest) returns (CartInfo);

  // 精确覆盖购物车中某项商品的购买数量。
  rpc UpdateCartItem(UpdateCartItemRequest) returns (CartInfo);

  // 从购物车中移除选中的商品项。
  rpc RemoveItemFromCart(RemoveItemFromCartRequest) returns (CartInfo);

  // 查询用户当前购物车中的所有商品及价格总计。
  rpc GetCart(GetCartRequest) returns (CartInfo);

  // 清空用户的所有购物车内容。
  rpc ClearCart(ClearCartRequest) returns (google.protobuf.Empty);

  // 合并购物车（如：将匿名状态的商品同步到登录账号下）。
  rpc MergeCarts(MergeCartsRequest) returns (CartInfo);

  // 为购物车中的符合条件的商品尝试应用一张优惠券。
  rpc ApplyCouponToCart(ApplyCouponToCartRequest) returns (CartInfo);

  // 移除购物车中当前已绑定的优惠券。
  rpc RemoveCouponFromCart(RemoveCouponFromCartRequest) returns (CartInfo);
}

// 购物车视图详情。
message CartInfo {
  // 用户 ID。
  uint64 user_id = 1;
  // 包含的商品行列表。
  repeated CartItem items = 2;
  // 累计商品件数。
  int64 total_quantity = 3;
  // 合计原价总额（分）。
  int64 total_amount = 4;
  // 优惠减免总额（分）。
  int64 discount_amount = 5;
  // 最终预估支付总额（分）。
  int64 actual_amount = 6;
  // 当前绑定的优惠券码。
  google.protobuf.StringValue applied_coupon_code = 7;
  // 初次创建时间。
  google.protobuf.Timestamp created_at = 8;
  // 最后变动时间。
  google.protobuf.Timestamp updated_at = 9;
}

// 购物车内单个商品行。
message CartItem {
  // 购物车项唯一 ID。
  uint64 id = 1;
  // 用户 ID。
  uint64 user_id = 2;
  // 商品 SPU ID。
  uint64 product_id = 3;
  // 规格 SKU ID。
  uint64 sku_id = 4;
  // 商品标题。
  string product_name = 5;
  // 规格描述。
  string sku_name = 6;
  // 缩略图。
  string product_image_url = 7;
  // 实时单价（分）。
  int64 price = 8;
  // 加入数量。
  int32 quantity = 9;
  // 该行小计（分）。
  int64 total_price = 10;
  // 首次加入时间。
  google.protobuf.Timestamp created_at = 11;
  // 最后修改时间。
  google.protobuf.Timestamp updated_at = 12;
}

// 加入请求。
message AddItemToCartRequest {
  // 买家。
  uint64 user_id = 1;
  // 商品。
  uint64 product_id = 2;
  // 规格。
  uint64 sku_id = 3;
  // 增量数量。
  int32 quantity = 4;
}

// 数量更新请求。
message UpdateCartItemRequest {
  // 买家。
  uint64 user_id = 1;
  // 目标项 ID。
  uint64 cart_item_id = 2;
  // 覆盖数量。
  int32 quantity = 3;
}

// 移除请求。
message RemoveItemFromCartRequest {
  // 买家。
  uint64 user_id = 1;
  // 待删项 ID 集合。
  repeated uint64 cart_item_ids = 2;
}

// 查询请求。
message GetCartRequest {
  // 用户 ID。
  uint64 user_id = 1;
}

// 清空请求。
message ClearCartRequest {
  // 用户 ID。
  uint64 user_id = 1;
}

// 合并请求。
message MergeCartsRequest {
  // 离线/源 ID。
  uint64 source_user_id = 1;
  // 在线/目标 ID。
  uint64 target_user_id = 2;
}

// 用券请求。
message ApplyCouponToCartRequest {
  // 用户 ID。
  uint64 user_id = 1;
  // 券业务码。
  string coupon_code = 2;
}

// 删券请求。
message RemoveCouponFromCartRequest {
  // 用户 ID。
  uint64 user_id = 1;
}
